Version 5.0.0.9 - *

- Fixed a minor settings detection bug in the profiler.
- The code completion dialog now hides its tooltips when the user chooses so by unticking "Enable editor hints", preventing an access error.
- Reorganized parts of the interface: now makes better use of free space.
- One can select and copy now the information in the file properties window.
- Added a link to GCC's compiler documentation below the compiler options.
- Added a few more options to -march, -std and -O. Note: this might change settings in pre-5.0.0.9, please reapply them!

Version 5.0.0.8 - 20 November 2011

- Remapped all language IDs so that much more translations will fit nicely in the tables.
- Profiling can now also be properly used without a project.
- The function scanner now ignores comments.
- Added an option to change the UI font.
- Rescaled portions of the statusbar to accomodate other fonts.
- Again updated big parts of the local variable scanner.
- Removed 'Backspace Unindents' and 'Keep trailing spaces'. These options were too buggy and/or useless.
- Set the mouseover delay to 1500 by default now.
- Dev-C++ now does not stall when GCC complains about incorrect filenames. Instead, it shows GCC's error in the formatted log.
- Added a few more previously hardcoded text items to the translations.
- Fixed a few out of bounds errors in code scanning code.
- Updated the Chinese (TW) translations thanks to 'cin.getline'.
- Updated the CVS page.

Version 5.0.0.7 - 9 November 2011

- The compiler log output now always outputs the raw text even when no errors have been found in the code.
- The parameters now default to nothing (let MinGW decide) instead of ISO C99.
- The find output saver now correctly outputs its items.
- Added a few more fixes to the tools menu.
- New untitled files now get saved properly.
- The { autocompletion now only inserts an extra newline when building function parameters and can also detect structs, and will append }; for them.