@@ -663,13 +663,16 @@ begin
   chkSupportXP.Caption:=      Lang[ID_POPT_SUPPORTXP];
 
   // compiler tab
-  //tabCompSet.Caption:=  Lang[ID_POPT_COMPTAB];
-  tabCompOpts.Caption:=  Lang[ID_PARAM_CAPTION];
-  lblAdditions.Caption:=  '  '+Lang[ID_POPT_ADDITIONAL]+'  ';
-  lblCompiler.Caption:=   Lang[ID_POPT_COMP];
-  lblCppCompiler.Caption:=Lang[ID_COPT_GRP_CPP];
-  lblLinker.Caption:=     Lang[ID_COPT_LINKERTAB];
+  //tabCompSet.Caption:=     Lang[ID_POPT_COMPTAB];
+  tabCompOpts.Caption:=    Lang[ID_PARAM_CAPTION];
+  lblAdditions.Caption:=   '  '+Lang[ID_POPT_ADDITIONAL]+'  ';
+  lblCompiler.Caption:=    Lang[ID_POPT_COMP];
+  lblCppCompiler.Caption:= Lang[ID_COPT_GRP_CPP];
+  lblLinker.Caption:=      Lang[ID_COPT_LINKERTAB];
   AddLibBtn.Caption:=      Lang[ID_POPT_ADDLIBRARY];
+
+  // Settings
+  OptionsTip.Caption:=     Lang[ID_COPT_COMPILERTIP];
 
   //dir tab
   SubTabs.Tabs.Clear;
