@@ -6,7 +6,7 @@
 -$F-
 -$G+
 -$H+
--$I+
+-$I-
 -$J-
 -$K-
 -$L+
@@ -14,8 +14,8 @@
 -$N+
 -$O+
 -$P+
--$Q+
--$R+
+-$Q-
+-$R-
 -$S-
 -$T-
 -$U-
