@@ -547,8 +547,8 @@ BEGIN
 	SynEditTextBuffer_SListIndexOutOfBounds,	"Invalid stringlist index %d"
 	SynEditTextBuffer_SInvalidCapacity,	"Stringlist capacity cannot be smaller than count"
 	version_DEVCPP,	"Dev-C++"
-	version_DEVCPP_VERSION,	"5.0.0.9 RC1"
-	version_DEVCPP_BUILDTIME,	"Nov 29 2011 - 23:15"
+	version_DEVCPP_VERSION,	"5.0.0.9 RC2+"
+	version_DEVCPP_BUILDTIME,	"Dec 4 2011 - 20:17"
 	version_DEFAULT_LANG_FILE,	"English.lng"
 	version_DEV_INTERNAL_OPEN,	"$__DEV_INTERNAL_OPEN"
 	version_DEV_SEARCHLOOP,	"$__DEV_SEARCH_LOOP"
